<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_village_title">Tambah Desa Binaan</string>
    <string name="add_latitude">Latitude</string>
    <string name="add_longitude">Longitude</string>
    <string name="add_about_village">Tentang Desa</string>
    <string name="btn_add_village">Tambah</string>
    <string name="empty_village_name">Nama Desa tidak boleh kosong</string>
    <string name="empty_latitude">Latitude tidak boleh kosong</string>
    <string name="empty_longitude">Longitude tidak boleh kosong</string>
    <string name="empty_desc_village">Deskripsi tentang desa tidak boleh kosong</string>
    <string name="desc_village_image">Foto Desa</string>
    <string name="village_image">foto desa</string>
    <string name="documentation_pictures">Dokumentasi Foto</string>
    <string name="failed_add_desa">Maaf terjadi kesalahan saat mengupload data</string>
    <string name="success_add_desa">Desa telah berhasil di tambahkan</string>
    <string name="empty_documentation">Dokumentasi foto tidak boleh kosong</string>
</resources>